--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,40 +1,34 @@
 .page-header {
-  background-color: #1b2931;
-}
-
-.page-header__wrapper {
-  display: flex;
-  flex-direction: column;
-  width: 320px;
-  margin: 0 auto;
   padding-top: 17px;
   padding-bottom: 70px;
-  background-size: 295px 220px, 320px auto;
-  background-repeat: no-repeat, no-repeat;
-  background-position: 26px 92px, 0 0;
+  background-size: 320px auto;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-color: #1b2931;
+  overflow: hidden;
 }
 
-.no-webp .page-header__wrapper,
-.no-js .page-header__wrapper {
-  background-image: url("../img/motherboard-mobile@1x.png"), url("../img/index-background-mobile@1x.jpg");
+.no-webp .page-header,
+.no-js .page-header {
+  background-image: url("../img/index-background-mobile@1x.jpg");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/motherboard-mobile@2x.png"), url("../img/index-background-mobile@2x.jpg");
+    background-image: url("../img/index-background-mobile@2x.jpg");
   }
 }
 
-.webp .page-header__wrapper {
-  background-image: url("../img/motherboard-mobile@1x.webp"), url("../img/index-background-mobile@1x.webp");
+.webp .page-header {
+  background-image: url("../img/index-background-mobile@1x.webp");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/motherboard-mobile@2x.webp"), url("../img/index-background-mobile@2x.webp");
+    background-image: url("../img/index-background-mobile@2x.webp");
   }
 }
 
 .page-header__wrapper-block {
   position: relative;
   display: flex;
-  margin-bottom: 231px;
+  padding-bottom: 231px;
 
   &::after {
     @include pseudo;
@@ -44,6 +38,35 @@
     height: 13px;
     margin-left: 8px;
     background-image: url("../img/union.svg");
+  }
+
+  &::before {
+    @include pseudo;
+    top: 75px;
+    left: 50%;
+    width: 295px;
+    height: 220px;
+    margin-left: -134px;
+    background-size: 295px 220px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+  }
+}
+
+.no-webp .page-header__wrapper-block::before,
+.no-js .page-header__wrapper-block::before {
+  background-image: url("../img/motherboard-mobile@1x.png");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/motherboard-mobile@2x.png");
+  }
+}
+
+.webp .page-header__wrapper-block::before {
+  background-image: url("../img/motherboard-mobile@1x.webp");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/motherboard-mobile@2x.webp");
   }
 }
 
@@ -158,29 +181,28 @@
 }
 
 @media (min-width: $tablet-width) {
-  .page-header__wrapper {
-    min-width: 768px;
+  .page-header {
     padding-top: 17px;
     padding-bottom: 163px;
-    background-size: 261px auto, 768px auto;
-    background-repeat: no-repeat, no-repeat;
-    background-position: 509px 113px, 0 0;
+    background-size: 768px auto;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
   }
 
-  .no-webp .page-header__wrapper,
-  .no-js .page-header__wrapper {
-    background-image: url("../img/motherboard-tablet@1x.png"), url("../img/index-background-tablet@1x.jpg");
+  .no-webp .page-header,
+  .no-js .page-header {
+    background-image: url("../img/index-background-tablet@1x.jpg");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/motherboard-tablet@2x.png"), url("../img/index-background-tablet@2x.jpg");
+      background-image: url("../img/index-background-tablet@2x.jpg");
     }
   }
 
-  .webp .page-header__wrapper {
-    background-image: url("../img/motherboard-tablet@1x.webp"), url("../img/index-background-tablet@1x.webp");
+  .webp .page-header {
+    background-image: url("../img/index-background-tablet@1x.webp");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/motherboard-tablet@2x.webp"), url("../img/index-background-tablet@2x.webp");
+      background-image: url("../img/index-background-tablet@2x.webp");
     }
   }
 
@@ -190,16 +212,45 @@
     margin-top: 3px;
     margin-left: 0;
     background-image: url("../img/text-logo_light.svg");
-    background-size: 202px auto;
+    background-size: 202px 52px;
     background-repeat: no-repeat;
   }
 
   .page-header__wrapper-block {
+    padding-bottom: 0;
     margin-bottom: 117px;
+
+    &::before {
+      top: 97px;
+      left: 50%;
+      width: 265px;
+      height: 345px;
+      margin-left: 124px;
+      background-size: 261px 344px;
+      background-repeat: no-repeat;
+      background-position: 0 0;
+    }
 
     &::after {
       top: 20px;
       margin-left: 203px;
+    }
+  }
+
+  .no-webp .page-header__wrapper-block::before,
+  .no-js .page-header__wrapper-block::before {
+    background-image: url("../img/motherboard-tablet@1x.png");
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/motherboard-tablet@2x.png");
+    }
+  }
+
+  .webp .page-header__wrapper-block::before {
+    background-image: url("../img/motherboard-tablet@1x.webp");
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/motherboard-tablet@2x.webp");
     }
   }
 
@@ -253,33 +304,69 @@
 
 @media (min-width: $desktop-width) {
   .page-header {
-    min-width: 1920px;
-  }
-
-  .page-header__wrapper {
-    min-width: 1920px;
     padding-top: 30px;
-    padding-bottom: 72px;
-    background-size: 705px auto, 678px 488px, 1920px auto;
-    background-repeat: no-repeat, no-repeat, no-repeat;
-    background-position: 1037px 258px, 1017px 272px, 0 0;
+    padding-bottom: 134px;
+    background-size: 1920px 950px;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
   }
 
-  .no-webp .page-header__wrapper,
-  .no-js .page-header__wrapper {
-    background-image: url("../img/motherboard-desktop@1x.png"), url("../img/triangle-desktop-ph.svg"), url("../img/index-background-desktop@1x.jpg");
+  .no-webp .page-header,
+  .no-js .page-header {
+    background-image: url("../img/index-background-desktop@1x.jpg");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/motherboard-desktop@2x.png"), url("../img/triangle-desktop-ph.svg"), url("../img/index-background-desktop@2x.jpg");
+      background-image: url("../img/index-background-desktop@2x.jpg");
     }
   }
 
-  .webp .page-header__wrapper {
-    background-image: url("../img/motherboard-desktop@1x.webp"), url("../img/triangle-desktop-ph.svg"), url("../img/index-background-desktop@1x.webp");
+  .webp .page-header {
+    background-image: url("../img/index-background-desktop@1x.webp");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/motherboard-desktop@2x.webp"), url("../img/triangle-desktop-ph.svg"), url("../img/index-background-desktop@2x.webp");
+      background-image: url("../img/index-background-desktop@2x.webp");
     }
+  }
+
+  .page-header__wrapper-block {
+    margin-bottom: 232px;
+
+    &::after {
+      top: 23px;
+      margin-left: -387px;
+    }
+
+    &::before {
+      top: 97px;
+      left: 50%;
+      width: 780px;
+      height: 800px;
+      margin-left: 10px;
+      background-size: 705px auto, 770px 485px;
+      background-repeat: no-repeat, no-repeat;
+      background-position: 68px 130px, 2px 145px;
+    }
+  }
+
+  .no-webp .page-header__wrapper-block::before,
+  .no-js .page-header__wrapper-block::before {
+    background-image: url("../img/motherboard-desktop@1x.png"), url("../img/triangle-desktop-ph.svg");
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/motherboard-desktop@2x.png"), url("../img/triangle-desktop-ph.svg");
+    }
+  }
+
+  .webp .page-header__wrapper-block::before {
+    background-image: url("../img/motherboard-desktop@1x.webp"), url("../img/triangle-desktop-ph.svg");
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/motherboard-desktop@2x.webp"), url("../img/triangle-desktop-ph.svg");
+    }
+  }
+
+  .page-header__logo {
+    margin-left: 12px;
   }
 
   .page-header__mail-svg {
@@ -313,15 +400,6 @@
   .page-header__phone:active::after {
     color: $blue-color;
     opacity: 1;
-  }
-
-  .page-header__wrapper-block {
-    margin-bottom: 232px;
-  }
-
-  .page-header__wrapper-block::after {
-    top: 23px;
-    margin-left: -387px;
   }
 
   .page-header__phone-svg {
@@ -380,7 +458,7 @@
 
   .page-header__title {
     width: 740px;
-    margin-left: -5px;
+    margin-left: 10px;
     margin-bottom: 25px;
     font-size: 80px;
     line-height: 94px;
@@ -393,8 +471,8 @@
 
   .page-header__text {
     width: 650px;
-    margin-left: 94px;
-    margin-bottom: 45px;
+    margin-left: 107px;
+    margin-bottom: 44px;
     font-size: 22px;
     line-height: 34px;
 
@@ -406,34 +484,32 @@
 
   .page-header__button {
     width: 407px;
-    margin-bottom: 75px;
-    margin-left: 93px;
+    margin-bottom: 120px;
+    margin-left: 107px;
     white-space: nowrap;
   }
 
   .page-header__link {
+    @include mono;
     display: block;
-    width: 20px;
-    height: 110px;
-    margin-left: -5px;
-    padding-top: 16px;
-    padding-left: 5px;
-    border: 1px solid transparent;
+    width: 110px;
+    height: 20px;
+    margin-left: -34px;
+    font-size: 14px;
+    line-height: 16px;
+    color: rgba(255, 255, 255, 0.5);
     cursor: pointer;
+    transform: rotate(-90deg);
+    text-decoration: none;
 
     &:hover,
     &:focus {
-      border: 1px solid #ffffff;
+      opacity: 0.7;
     }
 
     &:active {
       opacity: 1;
-      border: 1px solid $blue-color;
+      color: $blue-color;
     }
-  }
-
-  .page-header__link-img {
-    width: 16px;
-    height: 93px;
   }
 }
