--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -187,6 +187,8 @@
 @media (min-width: $desktop-width) {
   .product-list {
     justify-content: space-between;
+    margin-left: 13px;
+    margin-right: 13px;
     padding-left: 121px;
     padding-right: 121px;
   }
