правит состояние checkbox, бордер кнопки - шапка, пересобирает проект

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -441,6 +441,7 @@
     line-height: 16px;
     white-space: nowrap;
     color: #ffffff;
+    border: 1px solid #ffffff;
     background-color: transparent;
     cursor: pointer;
 
