--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -1,25 +1,28 @@
 .product-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 0;
-  padding-left: 0;
+  margin-left: 13px;
+  margin-right: 13px;
+  padding-left: 116px;
+  padding-right: 116px;
   list-style: none;
 }
 
 .product-list__item {
   display: flex;
-  width: 290px;
-  height: 256px;
-  margin-bottom: 30px;
+  width: 370px;
+  height: 620px;
 }
 
 .product-list__link {
   position: relative;
   box-sizing: border-box;
-  width: 290px;
-  height: 256px;
   text-decoration: none;
-  background-size: 290px 256px;
+  width: 370px;
+  height: 620px;
+  background-size: 370px 620px;
   background-repeat: no-repeat;
   border: 1px solid transparent;
   cursor: pointer;
@@ -49,77 +52,81 @@
 .product-list__title {
   @include roboto;
   width: 155px;
-  margin-top: 20px;
-  margin-left: 36px;
+  margin-top: 50px;
+  margin-left: 44px;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
   color: #ffffff;
-
-  &--margin-top {
-    margin-top: 30px;
-  }
 }
 
 .no-webp .product-list__link--production,
 .no-js .product-list__link--production {
-  background-image: url("../img/product-background-mobile-1@1x.png");
+  background-image: url("../img/product-background-desktop-1@1x.png");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/product-background-mobile-1@2x.png");
+    background-image: url("../img/product-background-desktop-1@2x.png");
   }
 }
 
 .webp .product-list__link--production {
-  background-image: url("../img/product-background-mobile-1@1x.webp");
+  background-image: url("../img/product-background-desktop-1@1x.webp");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/product-background-mobile-1@2x.webp");
+    background-image: url("../img/product-background-desktop-1@2x.webp");
   }
 }
 
 .no-webp .product-list__link--installation,
 .no-js .product-list__link--installation {
-  background-image: url("../img/product-background-mobile-2@1x.png");
+  background-image: url("../img/product-background-desktop-2@1x.png");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/product-background-mobile-2@2x.png");
+    background-image: url("../img/product-background-desktop-2@2x.png");
   }
 }
 
 .webp .product-list__link--installation {
-  background-image: url("../img/product-background-mobile-2@1x.webp");
+  background-image: url("../img/product-background-desktop-2@1x.webp");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/product-background-mobile-2@2x.webp");
+    background-image: url("../img/product-background-desktop-2@2x.webp");
   }
 }
 
 .no-webp .product-list__link--components,
 .no-js .product-list__link--components {
-  background-image: url("../img/product-background-mobile-3@1x.png");
+  background-image: url("../img/product-background-desktop-3@1x.png");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/product-background-mobile-3@2x.png");
+    background-image: url("../img/product-background-desktop-3@2x.png");
   }
 }
 
 .webp .product-list__link--components {
-  background-image: url("../img/product-background-mobile-3@1x.webp");
+  background-image: url("../img/product-background-desktop-3@1x.webp");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/product-background-mobile-3@2x.webp");
+    background-image: url("../img/product-background-desktop-3@2x.webp");
   }
 }
 
-@media (min-width: $tablet-width) {
+@media (max-width: $desktop-width) {
+  .product-list {
+    justify-content: center;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   .product-list__item {
     width: 715px;
+    height: 256px;
     margin-bottom: 46px;
   }
 
   .product-list__link {
     width: 715px;
+    height: 256px;
     background-size: 715px 256px;
   }
 
@@ -184,79 +191,77 @@
   }
 }
 
-@media (min-width: $desktop-width) {
-  .product-list {
-    justify-content: space-between;
-    margin-left: 13px;
-    margin-right: 13px;
-    padding-left: 121px;
-    padding-right: 121px;
-  }
-
+@media (max-width: $tablet-width) {
   .product-list__item {
-    width: 370px;
-    height: 620px;
+    width: 290px;
+    height: 256px;
+    margin-bottom: 30px;
   }
 
   .product-list__link {
-    width: 370px;
-    height: 620px;
-    background-size: 370px 620px;
+    width: 290px;
+    height: 256px;
+    background-size: 290px 256px;
   }
 
   .product-list__title {
-    margin-top: 50px;
-    margin-left: 44px;
+    width: 155px;
+    margin-top: 20px;
+    margin-left: 36px;
+
+    &--margin-top {
+      margin-top: 30px;
+    }
   }
 
   .no-webp .product-list__link--production,
   .no-js .product-list__link--production {
-    background-image: url("../img/product-background-desktop-1@1x.png");
+    background-image: url("../img/product-background-mobile-1@1x.png");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/product-background-desktop-1@2x.png");
+      background-image: url("../img/product-background-mobile-1@2x.png");
     }
   }
 
   .webp .product-list__link--production {
-    background-image: url("../img/product-background-desktop-1@1x.webp");
+    background-image: url("../img/product-background-mobile-1@1x.webp");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/product-background-desktop-1@2x.webp");
+      background-image: url("../img/product-background-mobile-1@2x.webp");
     }
   }
 
   .no-webp .product-list__link--installation,
   .no-js .product-list__link--installation {
-    background-image: url("../img/product-background-desktop-2@1x.png");
+    background-image: url("../img/product-background-mobile-2@1x.png");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/product-background-desktop-2@2x.png");
+      background-image: url("../img/product-background-mobile-2@2x.png");
     }
   }
 
   .webp .product-list__link--installation {
-    background-image: url("../img/product-background-desktop-2@1x.webp");
+    background-image: url("../img/product-background-mobile-2@1x.webp");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/product-background-desktop-2@2x.webp");
+      background-image: url("../img/product-background-mobile-2@2x.webp");
     }
   }
 
   .no-webp .product-list__link--components,
   .no-js .product-list__link--components {
-    background-image: url("../img/product-background-desktop-3@1x.png");
+    background-image: url("../img/product-background-mobile-3@1x.png");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/product-background-desktop-3@2x.png");
+      background-image: url("../img/product-background-mobile-3@2x.png");
     }
   }
 
   .webp .product-list__link--components {
-    background-image: url("../img/product-background-desktop-3@1x.webp");
+    background-image: url("../img/product-background-mobile-3@1x.webp");
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/product-background-desktop-3@2x.webp");
+      background-image: url("../img/product-background-mobile-3@2x.webp");
     }
   }
 }
