--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -1,33 +1,72 @@
 .about-company {
-  padding-top: 8px;
-  padding-bottom: 35px;
+  position: relative;
+  padding-top: 45px;
+  padding-bottom: 79px;
+  background-size: 215px auto;
+  background-position: 112px 49px;
+  background-repeat: no-repeat;
+
+  &::before {
+    @include pseudo;
+    bottom: -198px;
+    left: 50%;
+    width: 880px;
+    height: 874px;
+    margin-left: -1098px;
+    background-image: url("../img/polygon-desktop-2.svg");
+    background-repeat: no-repeat;
+    background-size: 587px 581px;
+    z-index: -1;
+  }
+}
+
+.no-webp .about-company,
+.no-js .about-company {
+  background-image: url("../img/2005-year@1x.png");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/2005-year@2x.png");
+  }
+}
+
+.webp .about-company {
+  background-image: url("../img/2005-year@1x.webp");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/2005-year@2x.webp");
+  }
 }
 
 .about-company__title {
   @include roboto;
   margin-top: 0;
-  margin-bottom: 21px;
-  font-weight: normal;
-  font-size: 28px;
-  line-height: 39px;
-  color: $text-color;
+  margin-left: 310px;
+  margin-bottom: 20px;
+  font-size: 36px;
+  line-height: 51px;
 }
 
 .about-company__text {
   @include mono;
-  margin-top: 0;
-  margin-bottom: 40px;
+  width: 984px;
+  margin-left: 310px;
+  margin-bottom: 20px;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
 
   &--height {
-    margin-bottom: 28px;
+    margin-bottom: 0;
   }
+}
 
-  &--index-appearance {
-    display: none;
-  }
+.about-company__text--index-appearance {
+  margin-top: 0;
+  margin-bottom: 39px;
+}
+
+.about-company__text span {
+  display: none;
 }
 
 .about-company__button {
@@ -36,7 +75,7 @@
   width: 180px;
   height: 45px;
   margin-bottom: 30px;
-  margin-left: 2px;
+  margin-left: 310px;
   padding-top: 14px;
   font-size: 14px;
   line-height: 16px;
@@ -54,12 +93,12 @@
   }
 }
 
-@media (min-width: $tablet-width) {
+@media (max-width: $desktop-width) {
   .about-company {
+    padding-top: 7px;
     padding-bottom: 53px;
     background-size: 244px auto;
-    background-repeat: no-repeat;
-    background-position: -1px 6px;
+    background-position: 0 6px;
   }
 
   .no-webp .about-company,
@@ -87,11 +126,20 @@
   }
 
   .about-company__text {
-    margin-left: 188px;
+    width: 535px;
+    margin-left: 185px;
     margin-bottom: 20px;
 
     &--height {
       margin-bottom: 41px;
+    }
+
+    & span {
+      display: inline-block;
+    }
+
+    &--index-appearance {
+      display: none;
     }
   }
 
@@ -100,55 +148,66 @@
   }
 }
 
-@media (min-width: $desktop-width) {
+@media (max-width: $tablet-width) {
   .about-company {
-    position: relative;
-    padding-top: 45px;
-    padding-bottom: 79px;
-    background-size: 215px auto;
-    background-position: 142px 49px;
+    padding-top: 6px;
+    padding-bottom: 35px;
+  }
 
-    &::before {
-      @include pseudo;
-      bottom: -198px;
-      left: 50%;
-      width: 880px;
-      height: 874px;
-      margin-left: -1098px;
-      background-image: url("../img/polygon-desktop-2.svg");
-      background-repeat: no-repeat;
-      background-size: 587px 581px;
-      z-index: -1;
+  .no-webp .about-company,
+  .no-js .about-company {
+    background-image: none;
+  }
+
+  .webp .about-company {
+    background-image: none;
+  }
+
+  .about-company__title {
+    margin-left: 0;
+    margin-bottom: 21px;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 39px;
+    color: $text-color;
+  }
+
+  .about-company__text {
+    width: 290px;
+    margin-top: 0;
+    margin-bottom: 40px;
+    margin-left: 0;
+
+    &--height {
+      margin-bottom: 28px;
+    }
+
+    &--index-appearance {
+      display: none;
     }
   }
 
   .about-company__button {
-    margin-left: 315px;
-  }
-
-  .about-company__title {
-    margin-left: 315px;
-    margin-bottom: 20px;
-    font-size: 36px;
-    line-height: 51px;
-  }
-
-  .about-company__text {
-    width: 984px;
-    margin-left: 315px;
-    margin-bottom: 20px;
-
-    &--height {
-      margin-bottom: 0;
-    }
-  }
-
-  .about-company__text--index-appearance {
+    @include button;
     display: block;
-    margin-bottom: 40px;
-  }
+    width: 180px;
+    height: 45px;
+    margin-bottom: 30px;
+    margin-left: 2px;
+    padding-top: 14px;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.05em;
+    color: #ffffff;
+    text-decoration: none;
+    background-color: $blue-color;
+    cursor: pointer;
 
-  .about-company__text span {
-    display: none;
+    &:active {
+      color: $blue-color;
+      background-color: #ffffff;
+      border: 1px solid $blue-color;
+      opacity: 1;
+    }
   }
 }
