--- a/source/sass/blocks/advantages-card.scss
+++ b/source/sass/blocks/advantages-card.scss
@@ -1,11 +1,19 @@
+.advantages-card__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1170px;
+}
+
 .advantages-card {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   margin-left: 1px;
-  padding-top: 23px;
-  padding-bottom: 14px;
-  padding-left: 25px;
+  padding-top: 38px;
+  padding-bottom: 66px;
+  padding-left: 42px;
+  padding-right: 45px;
   background-color: #ffffff;
   border-top: 1px solid #ebebeb;
   border-bottom: 1px solid #ebebeb;
@@ -13,12 +21,19 @@
   box-shadow: -2px 0 0 $blue-color;
 
   &--providers {
-    padding-top: 21px;
+    padding-top: 38px;
+    padding-left: 42px;
   }
 
   &--privacy {
-    padding-top: 25px;
-    padding-bottom: 24px;
+    padding-top: 43px;
+    padding-bottom: 109px;
+  }
+
+  &--personalization {
+    padding-top: 38px;
+    padding-left: 43px;
+    padding-bottom: 35px;
   }
 
   &:hover {
@@ -31,12 +46,12 @@
   }
 }
 
-.advantages-card:hover .advantages-card__title {
-  color: #ffffff;
-}
-
 .advantages-card__icon-svg {
   fill: $blue-color;
+}
+
+.advantages-card:hover .advantages-card__title {
+  color: #ffffff;
 }
 
 .advantages-card:hover .advantages-card__icon-svg {
@@ -45,46 +60,67 @@
 
 .advantages-card__title {
   @include roboto;
-  width: 245px;
-  margin-top: 11px;
-  margin-bottom: 10px;
+  width: 310px;
+  margin-top: 19px;
+  margin-bottom: 16px;
+  font-size: 24px;
+  line-height: 34px;
   font-weight: normal;
-  font-size: 20px;
-  line-height: 28px;
   color: $blue-color;
 
+  &--margin {
+    margin-top: 20px;
+    margin-bottom: 16px;
+  }
+
   &--margin-top {
-    margin-top: 16px;
+    margin-top: 20px;
   }
 
   &--margin-bottom {
-    margin-bottom: 12px;
+    margin-top: 20px;
+    margin-bottom: 16px;
   }
 }
 
 .advantages-card__description {
   @include mono;
-  width: 245px;
+  width: 482px;
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 0;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
 
   &--width {
-    width: 250px;
+    width: 483px;
   }
 }
 
-@media (min-width: $tablet-width) {
+.advantages-card__icon-svg--hired {
+  width: 35px;
+  height: 35px;
+}
+
+.advantages-card__icon-svg--detective {
+  width: 36px;
+  height: 31px;
+}
+
+.advantages-card__icon-svg--personalization {
+  width: 35px;
+  height: 35px;
+}
+
+@media (max-width: $desktop-width) {
   .advantages-card__wrapper {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    width: 720px;
+    margin-left: 0;
   }
 
   .advantages-card {
-    margin-bottom: 28px;
+    margin-bottom: 30px;
     padding-top: 23px;
     padding-bottom: 19px;
     padding-left: 25px;
@@ -96,7 +132,7 @@
     }
 
     &--privacy {
-      padding-top: 28px;
+      padding-top: 24px;
       padding-bottom: 55px;
     }
 
@@ -111,20 +147,19 @@
     width: 310px;
     margin-top: 6px;
     margin-bottom: 10px;
-    font-size: 24px;
-    line-height: 34px;
+
 
     &--margin {
-      margin-top: 10px;
+      margin-top: 8px;
       margin-bottom: 13px;
     }
 
     &--margin-top {
-      margin-top: 10px;
+      margin-top: 8px;
     }
 
     &--margin-bottom {
-      margin-top: 10px;
+      margin-top: 7px;
       margin-bottom: 7px;
     }
   }
@@ -133,8 +168,7 @@
     width: 295px;
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 16px;
-    line-height: 22px;
+
 
     &--width {
       width: 290px;
@@ -142,80 +176,61 @@
   }
 }
 
-@media (min-width: $desktop-width) {
+
+@media (max-width: $tablet-width) {
   .advantages-card__wrapper {
-    justify-content: flex-start;
-    margin-left: 136px;
+    width: 290px;
   }
 
   .advantages-card {
-    margin-bottom: 30px;
-    padding-top: 38px;
-    padding-bottom: 66px;
-    padding-left: 42px;
-    padding-right: 45px;
+    width: 290px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    padding-top: 23px;
+    padding-bottom: 14px;
+    padding-left: 25px;
 
     &--providers {
-      margin-left: 30px;
-      padding-top: 38px;
-      padding-left: 42px;
+      margin-left: 0;
+      padding-top: 21px;
     }
 
     &--privacy {
-      padding-top: 43px;
-      padding-bottom: 109px;
-      margin-right: 29px;
-    }
-
-    &--personalization {
-      padding-top: 38px;
-      padding-left: 43px;
-      padding-bottom: 35px;
+      margin-right: 0;
+      margin-left: 0;
+      padding-top: 25px;
+      padding-bottom: 24px;
     }
   }
 
   .advantages-card__title {
-    width: 310px;
-    margin-top: 18px;
-    margin-bottom: 16px;
+
+    width: 245px;
+    margin-top: 11px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    line-height: 28px;
 
     &--margin {
-      margin-top: 20px;
-      margin-bottom: 16px;
+      margin-top: 7px;
     }
 
     &--margin-top {
-      margin-top: 20px;
+      margin-top: 14px;
     }
 
     &--margin-bottom {
-      margin-top: 20px;
-      margin-bottom: 16px;
+      margin-bottom: 12px;
     }
   }
 
   .advantages-card__description {
-    width: 482px;
+    width: 245px;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 10px;
 
     &--width {
-      width: 483px;
+      width: 250px;
     }
-  }
-
-  .advantages-card__icon-svg--hired {
-    width: 35px;
-    height: 35px;
-  }
-
-  .advantages-card__icon-svg--detective {
-    width: 36px;
-    height: 31px;
-  }
-
-  .advantages-card__icon-svg--personalization {
-    width: 35px;
-    height: 35px;
   }
 }
