--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,26 +1,83 @@
 .feedback {
-  padding-top: 30px;
-  padding-bottom: 42px;
+  position: relative;
+  padding-top: 92px;
+  padding-bottom: 112px;
   background-color: $blue-color;
+
+  &::before {
+    @include pseudo;
+    top: 161px;
+    left: 50%;
+    width: 550px;
+    height: 300px;
+    margin-left: -620px;
+    background-size: 511px 288px;
+    background-repeat: no-repeat;
+    background-position: 10px 0;
+    z-index: 2;
+  }
+
+  &::after {
+    @include pseudo;
+    top: 41px;
+    left: 50%;
+    width: 625px;
+    height: 630px;
+    margin-left: -773px;
+    background-image: url("../img/triangle-desktop.svg");
+    background-size: 610px 630px;
+    background-repeat: no-repeat;
+    background-position: 10px -20px;
+    z-index: 1;
+  }
+}
+
+.no-webp .feedback::before,
+.no-js .feedback::before {
+  background-image: url("../img/paper_airplane@1x.png");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/paper_airplane@2x.png");
+  }
+}
+
+.webp .feedback::before {
+  background-image: url("../img/paper_airplane@1x.webp");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/paper_airplane@2x.webp");
+  }
+}
+
+.feedback__form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 570px;
+  margin-left: auto;
+  margin-right: 130px;
 }
 
 .feedback__title {
   @include roboto;
   margin-top: 0;
-  margin-bottom: 13px;
+  margin-bottom: 9px;
+  margin-right: 161px;
+  font-size: 36px;
   font-weight: normal;
-  font-size: 28px;
-  line-height: 39px;
+  line-height: 51px;
+  text-align: right;
   color: #ffffff;
 }
 
 .feedback__text {
   @include mono;
   margin-top: 0;
-  margin-bottom: 25px;
-  font-weight: normal;
+  margin-bottom: 51px;
+  margin-left: 731px;
   font-size: 16px;
   line-height: 22px;
+  font-weight: normal;
   color: #ffffff;
 }
 
@@ -42,45 +99,48 @@
 .feedback__form input {
   @include placeholder;
   box-sizing: border-box;
-  width: 100%;
+  width: 269px;
   height: 51px;
-  margin-bottom: 31px;
-  padding-top: 4px;
-  padding-left: 22px;
-  padding-right: 22px;
+  margin-bottom: 39px;
+  padding-left: 15px;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid transparent;
   box-shadow: none;
 
   &[type="checkbox"] {
     margin: 0;
+    margin-top: -8px;
     opacity: 0;
 
-    &:hover {
+    &:hover,
+    &:active,
+    &:focus {
       opacity: 0;
     }
   }
 
-  &[type="checkbox"] + .personal-data {
-    @include mono;
-    position: relative;
-    display: block;
-    margin-top: -55px;
-    padding-left: 34px;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    color: rgba(255, 255, 255, 0.8);
-    cursor: pointer;
-  }
-
   &[type="checkbox"] + .personal-data::before {
     @include pseudo;
-    top: 1px;
-    left: 0;
+    top: 0;
+    left: -10px;
     width: 15px;
     height: 14px;
     border: 1px solid #ffffff;
+  }
+
+  &[type="checkbox"] + .personal-data {
+    @include mono;
+    display: block;
+    position: relative;
+    width: 200px;
+    margin-top: -38px;
+    margin-left: 318px;
+    padding-left: 22px;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 16px;
+    color: rgba(255, 255, 255, 0.8);
+    cursor: pointer;
   }
 
   &[type="checkbox"]:checked + .personal-data::before {
@@ -115,13 +175,13 @@
 .feedback__form textarea {
   @include placeholder;
   box-sizing: border-box;
-  width: 100%;
-  height: 104px;
-  margin-bottom: 25px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 17px;
-  padding-right: 17px;
+
+  width: 570px;
+  height: 154px;
+  margin-bottom: 36px;
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid transparent;
   box-shadow: none;
@@ -135,25 +195,21 @@
     border: 1px solid #ffffff;
     opacity: 1;
     outline: none;
+    background-color: none;
   }
-}
-
-.feedback__input-wrapper input:focus ~ label,
-.feedback__input-wrapper textarea:focus ~ label {
-  top: -2px;
-  font-size: 12px;
-  color: rgba(255, 255, 255, 0.5);
 }
 
 .feedback__button {
   @include button;
   display: block;
-  width: 290px;
+  width: 270px;
   height: 47px;
-  margin-bottom: 28px;
+  margin-left: 0;
+  margin-right: 0;
   padding-top: 0;
   font-size: 14px;
   line-height: 16px;
+
   color: #ffffff;
   text-decoration: none;
   background-color: $blue-color;
@@ -166,10 +222,36 @@
   }
 }
 
-@media (min-width: $tablet-width) {
+.feedback__input-wrapper input:focus ~ label,
+.feedback__input-wrapper textarea:focus ~ label,
+.feedback__input-wrapper input:valid ~ label,
+.feedback__input-wrapper textarea:valid ~ label {
+  top: -2px;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+@media (max-width: $desktop-width) {
   .feedback {
     padding-top: 80px;
-    padding-bottom: 75px;
+    padding-bottom: 103px;
+
+    &::before {
+      display: none;
+    }
+
+    &::after {
+      display: none;
+    }
+  }
+
+  .no-webp .feedback::before,
+  .no-js .feedback::before {
+    display: none;
+  }
+
+  .webp .feedback::before {
+    display: none;
   }
 
   .feedback__title {
@@ -177,17 +259,18 @@
     padding-left: 63px;
     font-size: 32px;
     line-height: 45px;
+    text-align: left;
   }
 
   .feedback__text {
-    margin-bottom: 53px;
+    width: 672px;
+    margin-left: 0;
+    margin-bottom: 54px;
     padding-left: 68px;
   }
 
   .feedback__form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    width: 590px;
     margin-left: 67px;
     margin-right: 61px;
   }
@@ -198,15 +281,15 @@
     padding-top: 0;
 
     &[type="checkbox"] + .personal-data {
-      margin-top: -66px;
-      margin-left: 318px;
+      margin-top: -38px;
+      margin-left: 330px;
     }
   }
 
   .feedback__form textarea {
     width: 590px;
     height: 160px;
-    margin-bottom: 40px;
+    margin-bottom: 38px;
   }
 
   .feedback__button {
@@ -215,107 +298,62 @@
   }
 }
 
-@media (min-width: $desktop-width) {
+@media (max-width: $tablet-width) {
   .feedback {
-    position: relative;
-    padding-top: 92px;
-    padding-bottom: 84px;
-
-    &::before {
-      @include pseudo;
-      top: 160px;
-      left: 50%;
-      width: 550px;
-      height: 300px;
-      margin-left: -620px;
-      background-size: 511px 288px;
-      background-repeat: no-repeat;
-      background-position: 10px 0;
-      z-index: 2;
-    }
-
-    &::after {
-      @include pseudo;
-      top: 41px;
-      left: 50%;
-      width: 625px;
-      height: 630px;
-      margin-left: -774px;
-      background-image: url("../img/triangle-desktop.svg");
-      background-size: 610px 630px;
-      background-repeat: no-repeat;
-      background-position: 10px -20px;
-      z-index: 1;
-    }
-  }
-
-  .no-webp .feedback::before,
-  .no-js .feedback::before {
-    background-image: url("../img/paper_airplane@1x.png");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/paper_airplane@2x.png");
-    }
-  }
-
-  .webp .feedback::before {
-    background-image: url("../img/paper_airplane@1x.webp");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/paper_airplane@2x.webp");
-    }
-  }
-
-  .feedback__form {
-    width: 570px;
-    margin-left: auto;
-    margin-right: 135px;
+    padding-top: 30px;
+    padding-bottom: 43px;
   }
 
   .feedback__title {
-    margin-bottom: 9px;
-    margin-right: 165px;
-    font-size: 36px;
-    line-height: 51px;
-    text-align: right;
+    width: 290px;
+    margin-bottom: 13px;
+    padding-left: 0;
+    font-size: 28px;
+    line-height: 39px;
   }
 
   .feedback__text {
-    margin-left: 667px;
-    margin-bottom: 51px;
+    width: 290px;
+    margin-bottom: 25px;
+    padding-left: 0;
+  }
+
+  .feedback__form {
+    flex-direction: column;
+    width: 290px;
+    margin-left: 0;
   }
 
   .feedback__form input {
-    width: 269px;
-    margin-bottom: 39px;
-    padding-left: 15px;
+    width: 290px;
+    margin-bottom: 31px;
+    padding-top: 4px;
+    padding-left: 22px;
+    padding-right: 22px;
 
-    &:focus {
-      padding-left: 15px;
-    }
-
-    &[type="checkbox"] {
-      margin-top: -8px;
+    &[type="checkbox"] + .personal-data {
+      margin-left: 0;
+      padding-left: 34px;
     }
 
     &[type="checkbox"] + .personal-data::before {
-      left: -10px;
-    }
-
-    &[type="checkbox"] + .personal-data {
-      padding-left: 22px;
+      top: 1px;
+      left: 0;
     }
   }
 
   .feedback__form textarea {
-    width: 570px;
-    height: 154px;
-    margin-bottom: 36px;
+    width: 290px;
+    height: 104px;
+    margin-bottom: 25px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 17px;
+    padding-right: 17px;
   }
 
   .feedback__button {
-    width: 270px;
-    margin-left: 0;
-    margin-right: 0;
+    width: 290px;
+    margin-bottom: 24px;
   }
 }
