--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,26 +1,28 @@
 .footer__wrapper {
   display: flex;
-  flex-direction: column;
+  width: 1430px;
+  margin: 0 auto;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 33px;
 }
 
 .footer__social {
-  padding-top: 46px;
-  padding-bottom: 32px;
-  border-bottom: 1px solid rgba(98, 105, 98, 0.2);
+  margin-top: 65px;
 }
-
 
 .footer__social-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  width: 383px;
+  padding-top: 2px;
+  padding-left: 6px;
 }
 
 .footer__logo {
   display: block;
-  width: 216px;
-  height: 52px;
-  margin-bottom: 25px;
+  margin-bottom: 36px;
   cursor: pointer;
 
   &:hover {
@@ -28,32 +30,15 @@
   }
 }
 
-.footer__slogan {
-  display: flex;
-  flex-direction: column;
-  margin-top: 5px;
-  margin-left: 15px;
-}
-
-.footer__logo-link {
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-
-  &:hover {
-    opacity: 0.7;
-  }
-}
-
-.footer__logo-text {
-  margin-bottom: 3px;
+.footer__copyright--tablet-width {
+  display: none;
 }
 
 .footer__copyright {
   @include mono;
   position: relative;
   margin-top: 0;
-  margin-bottom: 16px;
+  margin-bottom: 0;
   font-size: 13px;
   font-weight: normal;
   line-height: 24px;
@@ -64,22 +49,59 @@
 
   &--desktop,
   &--desktop-logo {
-    display: none;
+    margin-left: 0;
+  }
+
+  &--desktop-logo {
+    margin-left: 74px;
+    margin-right: 144px;
   }
 }
 
-.footer__agreement {
+.footer__accordion {
+  padding-top: 50px;
+}
+
+.footer__accordion-list {
   display: flex;
-  flex-direction: column;
-  padding-top: 28px;
-  padding-bottom: 26px;
-  cursor: pointer;
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+.footer__accordion-sub--margin-left {
+  width: 350px;
+  margin-left: 157px;
+  margin-right: 0;
+}
+
+.footer__agreement {
+  border-top: 1px solid rgba(98, 105, 98, 0.2);
+}
+
+.footer__agreement-wrapper {
+  display: flex;
+  margin: 0 auto;
+  padding-top: 14px;
+  padding-bottom: 13px;
+  padding-left: 12px;
+}
+
+.footer__agreement-copyright {
+  @include mono;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 24px;
+  color: rgba(27, 47, 55, 0.5);
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
 }
 
 .footer__link-agreement {
   @include mono;
-  margin-top: 0;
-  margin-bottom: 21px;
+  margin-right: 405px;
   font-size: 13px;
   font-weight: normal;
   line-height: 24px;
@@ -101,88 +123,118 @@
   }
 }
 
-.footer__agreement-copyright {
-  @include mono;
-  position: relative;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size: 13px;
-  font-weight: normal;
-  line-height: 24px;
-  color: rgba(27, 47, 55, 0.5);
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  text-align: center;
-}
+@media (max-width: $desktop-width) {
+  .footer__wrapper {
+    position: relative;
+    flex-direction: column;
+    width: 720px;
+    padding-bottom: 20px;
 
-.footer__accordion-list {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-  list-style: none;
-}
-
-@media (max-width: $mobile-width-only) {
-  .footer__accordion .sub > .footer__accordion-link::before {
-    @include pseudo;
-    top: 0;
-    left: 50%;
-    width: 16px;
-    height: 16px;
-    margin-left: 127px;
-    background-image: url("../img/plus.svg");
-    background-repeat: no-repeat;
+    &::before {
+      @include pseudo;
+      top: 96px;
+      left: -151px;
+      width: 1023px;
+      height: 1px;
+      background-color: rgba(98, 105, 98, 0.2);
+    }
   }
 
-  .footer__accordion .sub > .footer__accordion-link.active::before {
-    @include pseudo;
-    top: 7px;
-    left: 50%;
-    width: 16px;
-    height: 1px;
-    margin-left: 127px;
-    background-image: url("../img/minus.svg");
-    background-repeat: no-repeat;
-  }
-
-  .no-js .footer__accordion .sub > .footer__accordion-link::before,
-  .no-js .footer__accordion .sub > .footer__accordion-link.active::before {
-    display: none;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .footer__social {
-    padding-top: 16px;
-    padding-bottom: 1px;
+  .footer__copyright--tablet-width {
+    display: block;
+    margin-top: 17px;
+    margin-right: 71px;
   }
 
   .footer__social-wrapper {
     flex-direction: row;
-    justify-content: space-between;
+    width: 720px;
+    padding-left: 0;
+  }
+
+  .footer__social {
+    margin-top: 17px;
   }
 
   .footer__logo {
-    margin-top: 2px;
-    margin-left: 0;
-  }
-
-  .footer__copyright {
-    margin-left: 15px;
-  }
-
-  .footer__social-list {
-    margin-top: 0;
-  }
-
-  .footer__accordion {
-    border-bottom: 1px solid rgba(98, 105, 98, 0.2);
+    width: 216px;
+    height: 52px;
+    margin-bottom: 25px;
+    margin-right: 88px;
   }
 
   .footer__accordion-list {
-    display: flex;
     width: 720px;
-    margin: 0 auto;
+    padding-left: 0;
+  }
+
+  .footer__accordion {
+    padding-top: 9px;
+  }
+
+  .footer__accordion-sub--margin-left {
+    margin-left: 86px;
+  }
+
+  .footer__copyright {
+    &--desktop,
+    &--desktop-logo {
+      display: none;
+    }
+  }
+
+  .footer__agreement {
+    display: flex;
+    padding-top: 7px;
+    padding-bottom: 26px;
+  }
+
+  .footer__link-agreement {
+    margin-left: 9px;
+    margin-right: 0;
+  }
+
+  .footer__agreement-copyright {
+    margin-left: auto;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .footer__wrapper {
+    width: 290px;
+    padding-bottom: 0;
+
+    &::before {
+      top: 260px;
+      left: -366px;
+    }
+  }
+
+  .footer__social {
+    padding-top: 26px;
+    padding-bottom: 32px;
+  }
+
+  .footer__social-wrapper {
+    flex-direction: column;
+    align-items: center;
+    width: 290px;
+  }
+
+  .footer__logo {
+    margin-top: 1px;
+    margin-right: 0;
+  }
+
+  .footer__copyright--tablet-width {
+    margin-top: 1px;
+    margin-right: 0;
+  }
+
+  .footer__accordion-list {
+    flex-direction: column;
+    width: 290px;
   }
 
   .footer__accordion-link {
@@ -191,99 +243,59 @@
   }
 
   .footer__accordion-sub--margin-left {
-    margin-left: 86px;
-  }
-
-  .footer__agreement {
-    flex-direction: row;
-    justify-content: space-between;
-    padding-top: 21px;
-    padding-bottom: 3px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .footer__wrapper {
-    position: relative;
-    flex-direction: row;
-    width: 1440px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 14px;
-    border-bottom: 1px solid rgba(98, 105, 98, 0.2);
-  }
-
-  .footer__social {
-    padding-top: 63px;
-    border: none;
-  }
-
-  .footer__social-wrapper {
-    flex-direction: column;
-    width: 400px;
-    padding-right: 23px;
-    align-items: flex-start;
-    padding-left: 12px;
-  }
-
-  .footer__logo {
-    margin-bottom: 54px;
-  }
-
-  .footer__copyright {
-    display: none;
-
-    &--desktop,
-    &--desktop-logo {
-      display: block;
-      margin-left: 0;
-      margin-bottom: 0;
-    }
-
-    &--desktop-logo {
-      margin-left: 74px;
-      margin-right: 144px;
-    }
-  }
-
-  .footer__accordion {
-    padding-top: 27px;
-    border-bottom: none;
-    overflow: hidden;
-  }
-
-  .footer__accordion-list {
-    width: auto;
-  }
-
-  .footer__accordion-link {
-    margin-bottom: 25px;
+    width: 290px;
     margin-left: 0;
-
-    &--margin-top {
-      margin-bottom: 20px;
-    }
-  }
-
-  .footer__accordion-sub--margin-left {
-    width: 350px;
-    margin-left: 157px;
-    margin-right: 0;
   }
 
   .footer__agreement {
-    position: relative;
-    justify-content: flex-start;
-    margin-left: 12px;
+    padding-bottom: 23px;
+    border-top: none;
+  }
+
+  .footer__agreement-wrapper {
+    flex-direction: column;
+    align-items: center;
     padding-top: 14px;
+    padding-bottom: 3px;
   }
 
   .footer__agreement-copyright {
-    margin-left: 0;
+    margin: 0 auto;
+    margin-left: 56px;
   }
 
   .footer__link-agreement {
-    margin-bottom: 12px;
-    margin-right: 406px;
+    margin-bottom: 22px;
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .footer__accordion .sub > .footer__accordion-link::before {
+    @include pseudo;
+    top: 20px;
+    left: 50%;
+    width: 16px;
+    height: 16px;
+    margin-left: 127px;
+    background-image: url("../img/plus.svg");
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+
+  .footer__accordion .sub > .footer__accordion-link.active::before {
+    @include pseudo;
+    top: 30px;
+    left: 50%;
+    width: 16px;
+    height: 16px;
+    margin-left: 127px;
+    background-image: url("../img/minus.svg");
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+
+  .no-js .footer__accordion .sub > .footer__accordion-link::before,
+  .no-js .footer__accordion .sub > .footer__accordion-link.active::before {
+    display: none;
   }
 }
