--- a/source/sass/blocks/logo-img.scss
+++ b/source/sass/blocks/logo-img.scss
@@ -1,9 +1,9 @@
 .logo-img {
-  width: 38px;
-  height: 38px;
+  width: 202px;
+  height: 52px;
 }
 
-@media (min-width: $tablet-width) {
+@media (max-width: $tablet-width) {
   .logo-img {
     display: none;
   }
