--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -43,18 +43,22 @@ body {
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: auto;
+  overflow: hidden;
 }
 
 .footer {
   flex-shrink: 0;
+  overflow: hidden;
 }
 
 .container {
-  width: 290px;
+  width: 1430px;
   margin: 0 auto;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-@media (min-width: $tablet-width) {
+@media (max-width: $desktop-width) {
   .container {
     width: 720px;
     margin: 0 auto;
@@ -63,12 +67,10 @@ body {
   }
 }
 
-@media (min-width: $desktop-width) {
+@media (max-width: $tablet-width) {
   .container {
-    width: 1440px;
+    width: 290px;
     margin: 0 auto;
-    padding-left: 30px;
-    padding-right: 30px;
   }
 }
 
