--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -60,7 +60,7 @@
   }
 
   .advantages__wrapper {
-    flex-direction: column;x
+    flex-direction: column;
 
     &::before {
       bottom: -311px;
