--- a/source/sass/blocks/logo-img.scss
+++ b/source/sass/blocks/logo-img.scss
@@ -1,6 +1,11 @@
 .logo-img {
   width: 202px;
   height: 52px;
+  background-size: 202px 52px;
+}
+
+.no-js .logo-img {
+  display: none;
 }
 
 @media (max-width: $tablet-width) {
