--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -83,6 +83,12 @@
   }
 }
 
+.no-js .page-header__logo {
+  width: 202px;
+  height: 52px;
+  background-image: url("../img//text-logo_light.svg");
+}
+
 .page-header__mail-svg {
   width: 19px;
   height: 14px;
@@ -494,6 +500,12 @@
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("../img/motherboard-mobile@2x.webp");
     }
+  }
+
+  .no-js .page-header__logo {
+    width: 38px;
+    height: 38px;
+    background-image: url("../img/logo.svg");
   }
 
   .page-header__logo {
