--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,238 +1,236 @@
 .modal {
   display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-@media (min-width: $desktop-width) {
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
+.modal__wrapper {
+  position: fixed;
+  box-sizing: border-box;
+  top: calc(50% - 303px);
+  left: calc(50% - 245px);
+  width: 490px;
+  height: 605px;
+  padding-top: 30px;
+  padding-bottom: 36px;
+  padding-left: 40px;
+  padding-right: 40px;
+  background-color: $blue-color;
+}
 
-  .modal__wrapper {
-    position: fixed;
-    box-sizing: border-box;
-    top: 136px;
-    left: 50%;
-    width: 490px;
-    height: 605px;
-    margin-left: -245px;
-    padding-top: 30px;
-    padding-bottom: 36px;
-    padding-left: 40px;
-    padding-right: 40px;
-    background-color: $blue-color;
-  }
+.modal__wrapper h2 {
+  @include roboto;
+  margin-top: 0;
+  margin-bottom: 13px;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 39px;
+  color: #ffffff;
+}
 
-  .modal__title {
-    @include roboto;
-    margin-top: 0;
-    margin-bottom: 13px;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 39px;
-    color: #ffffff;
-  }
+.modal__wrapper p {
+  @include mono;
+  width: 380px;
+  margin-top: 0;
+  margin-bottom: 32px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  color: #ffffff;
+}
 
-  .modal__description {
-    @include mono;
-    width: 380px;
-    margin-top: 0;
-    margin-bottom: 32px;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 22px;
-    color: #ffffff;
-  }
+.modal__input-wrapper {
+  position: relative;
+  margin-top: 0;
+  margin-bottom: 0;
 
-  .modal__input-wrapper {
-    position: relative;
-    margin-top: 0;
-    margin-bottom: 0;
-
-    & label {
-      @include placeholder;
-      position: absolute;
-      top: 12px;
-      left: 25px;
-      transition: 0.5s;
-      pointer-events: none;
-    }
-  }
-
-  .modal__form input {
+  & label {
     @include placeholder;
-    box-sizing: border-box;
-    width: 100%;
-    height: 51px;
-    margin-bottom: 31px;
-    padding-top: 4px;
-    padding-left: 22px;
-    padding-right: 22px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid transparent;
-    box-shadow: none;
+    position: absolute;
+    top: 12px;
+    left: 25px;
+    transition: 0.5s;
+    pointer-events: none;
+  }
+}
 
-    &[type="checkbox"] {
-      margin: 0;
+.modal__form input {
+  @include placeholder;
+  box-sizing: border-box;
+  width: 100%;
+  height: 51px;
+  margin-bottom: 31px;
+  padding-top: 4px;
+  padding-left: 22px;
+  padding-right: 22px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid transparent;
+  box-shadow: none;
+
+  &[type="checkbox"] {
+    margin: 0;
+    opacity: 0;
+
+    &:hover,
+    &:focus,
+    &:active {
       opacity: 0;
-
-      &:hover,
-      &:focus,
-      &:active {
-        opacity: 0;
-      }
-    }
-
-    &[type="checkbox"] + label {
-      @include mono;
-      position: relative;
-      display: block;
-      margin-top: -55px;
-      padding-left: 49px;
-      padding-right: 10px;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 16px;
-      color: rgba(255, 255, 255, 0.8);
-      cursor: pointer;
-    }
-
-    &[type="checkbox"] + label::before {
-      @include pseudo;
-      top: 1px;
-      left: 0;
-      width: 15px;
-      height: 14px;
-      border: 1px solid #ffffff;
-    }
-
-    &[type="checkbox"]:checked + label::before {
-      background-image: url("../img/checked.svg");
-      background-position: 3px 3px;
-      background-repeat: no-repeat;
-    }
-
-    &:hover {
-      opacity: 0.7;
-    }
-
-    &:focus {
-      border: 1px solid #ffffff;
-      opacity: 1;
-      outline: none;
-    }
-
-    &[type="checkbox"]:hover + label {
-      opacity: 0.7;
-    }
-
-    &[type="checkbox"]:focus + label {
-      opacity: 0.6;
     }
   }
 
-  .modal__form textarea {
-    @include placeholder;
-    box-sizing: border-box;
-    width: 100%;
-    height: 104px;
-    margin-bottom: 24px;
-    padding-top: 11px;
-    padding-left: 22px;
-    padding-right: 22px;
-    padding-bottom: 11px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid transparent;
-    box-shadow: none;
-    resize: none;
-
-    &:hover {
-      opacity: 0.7;
-    }
-
-    &:focus {
-      border: 1px solid #ffffff;
-      opacity: 1;
-      outline: none;
-    }
-  }
-
-  .modal__input-wrapper input:focus ~ label,
-  .modal__input-wrapper textarea:focus ~ label,
-  .modal__input-wrapper input:valid ~ label,
-  .modal__input-wrapper textarea:valid ~ label {
-    top: -2px;
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0.5);
-  }
-
-
-  .modal__button {
-    @include button;
+  &[type="checkbox"] + label {
+    @include mono;
+    position: relative;
     display: block;
-    width: 100%;
-    height: 47px;
-    margin-bottom: 33px;
-    padding-top: 0;
+    margin-top: -55px;
+    padding-left: 49px;
+    padding-right: 10px;
+    font-weight: normal;
     font-size: 14px;
     line-height: 16px;
-    color: #ffffff;
-    text-decoration: none;
-    background-color: $blue-color;
-    border: 1px solid #ffffff;
-
-    &:active {
-      color: $blue-color;
-      background-color: #ffffff;
-    }
-  }
-
-  .modal-show {
-    display: block;
-    animation: appearance 0.6s;
-  }
-
-  .modal__close-button {
-    position: absolute;
-    top: 21px;
-    right: 21px;
-    width: 17px;
-    height: 17px;
-    font-size: 0;
-    background-color: transparent;
-    background-image: url("../img/icon-close.svg");
-    border: 0;
+    color: rgba(255, 255, 255, 0.8);
     cursor: pointer;
-
-    &:active {
-      color: $blue-color;
-      background-color: #ffffff;
-      opacity: 1;
-    }
   }
 
-  @keyframes appearance {
-    0% {
-      opacity: 0.25;
-    }
+  &[type="checkbox"] + label::before {
+    @include pseudo;
+    top: 1px;
+    left: 0;
+    width: 15px;
+    height: 14px;
+    border: 1px solid #ffffff;
+  }
 
-    70% {
-      opacity: 0.5;
-    }
+  &[type="checkbox"]:checked + label::before {
+    background-image: url("../img/checked.svg");
+    background-position: 3px 3px;
+    background-repeat: no-repeat;
+  }
 
-    90% {
-      opacity: 0.75;
-    }
+  &:hover {
+    opacity: 0.7;
+  }
 
-    100% {
-      opacity: 1;
-    }
+  &:focus {
+    border: 1px solid #ffffff;
+    opacity: 1;
+    outline: none;
+  }
+
+  &[type="checkbox"]:hover + label {
+    opacity: 0.7;
+  }
+
+  &[type="checkbox"]:focus + label {
+    opacity: 0.6;
+  }
+}
+
+.modal__form textarea {
+  @include placeholder;
+  box-sizing: border-box;
+  width: 100%;
+  height: 104px;
+  margin-bottom: 24px;
+  padding-top: 11px;
+  padding-left: 22px;
+  padding-right: 22px;
+  padding-bottom: 11px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid transparent;
+  box-shadow: none;
+  resize: none;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:focus {
+    border: 1px solid #ffffff;
+    opacity: 1;
+    outline: none;
+  }
+}
+
+.modal__input-wrapper input:focus ~ label,
+.modal__input-wrapper textarea:focus ~ label,
+.modal__input-wrapper input:valid ~ label,
+.modal__input-wrapper textarea:valid ~ label {
+  top: -2px;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+
+.modal__button {
+  @include button;
+  display: block;
+  width: 100%;
+  height: 47px;
+  margin-bottom: 33px;
+  padding-top: 0;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+  text-decoration: none;
+  background-color: $blue-color;
+  border: 1px solid #ffffff;
+
+  &:active {
+    color: $blue-color;
+    background-color: #ffffff;
+  }
+}
+
+.modal-show {
+  display: block;
+  animation: appearance 0.6s;
+}
+
+.modal__close-button {
+  position: absolute;
+  top: 21px;
+  right: 21px;
+  width: 17px;
+  height: 17px;
+  font-size: 0;
+  background-color: transparent;
+  background-image: url("../img/icon-close.svg");
+  border: 0;
+  cursor: pointer;
+
+  &:active {
+    color: $blue-color;
+    opacity: 1;
+  }
+}
+
+@keyframes appearance {
+  0% {
+    opacity: 0.25;
+  }
+
+  70% {
+    opacity: 0.5;
+  }
+
+  90% {
+    opacity: 0.75;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@media (max-width: $desktop-width) {
+  .modal {
+    display: none;
   }
 }
