--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,5 @@
 .page-header {
+  flex: 0 0 auto;
   padding-top: 30px;
   padding-bottom: 135px;
   background-color: #1b2931;
@@ -76,11 +77,16 @@
   height: 52px;
   margin-top: 5px;
   margin-left: -8px;
-  cursor: pointer;
 
-  &:hover {
-    opacity: 0.7;
+  & img {
+    width: 202px;
+    height: 52px;
+    background-size: 202px 52px;
   }
+}
+
+.no-js .page-header__logo img {
+  display: none;
 }
 
 .no-js .page-header__logo {
@@ -198,7 +204,7 @@
   }
 }
 
-.page-header__title {
+.page-header__proposal h1 {
   @include roboto;
   margin-top: 0;
   width: 740px;
@@ -213,7 +219,7 @@
   overflow: hidden;
 }
 
-.page-header__text {
+.page-header__proposal p {
   @include mono;
   position: relative;
   margin-top: 0;
@@ -391,7 +397,7 @@
     height: 24px;
   }
 
-  .page-header__title {
+  .page-header__proposal h1 {
     width: 340px;
     margin-bottom: 28px;
     margin-left: 0;
@@ -404,7 +410,7 @@
     margin-left: 63px;
   }
 
-  .page-header__text {
+  .page-header__proposal p {
     width: 356px;
     margin-bottom: 55px;
     margin-left: 51px;
@@ -508,6 +514,10 @@
     width: 38px;
     height: 38px;
     background-image: url("../img/logo.svg");
+
+    & img {
+      display: none;
+    }
   }
 
   .page-header__logo {
@@ -532,7 +542,7 @@
     text-decoration: none;
   }
 
-  .page-header__title {
+  .page-header__proposal h1 {
     position: relative;
     width: 290px;
     margin-bottom: 27px;
@@ -543,7 +553,7 @@
     z-index: 2;
   }
 
-  .page-header__text {
+  .page-header__proposal p {
     width: 245px;
     margin-bottom: 40px;
     margin-left: -12px;
