--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,23 +1,19 @@
 .social {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   margin-top: 12px;
   padding-left: 0;
   list-style: none;
 }
 
 .social__link {
+  margin-right: 15px;
   cursor: pointer;
 
   &:focus,
   &:hover {
     opacity: 0.7;
   }
-}
-
-.social__link--ok {
-  margin-left: 15px;
-  margin-right: 16px;
 }
 
 .social__icon-fb,
