--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -22,16 +22,21 @@
   src: url("../fonts/PTMono-Regular.woff2") format("woff2"), url("../fonts/PTMono-Regular.woff") format("woff");
 }
 
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
   min-width: 320px;
-  margin: 0;
+  height: 100%;
+  margin: 0 auto;
   padding: 0;
 
   font-size: 16px;
   line-height: 22px;
-  font-family: "Roboto Condensed", "PT Mono", "Arial", monospace, sans-serif;
+  font-family: "Roboto Condensed", "PT Mono", "Arial", "Courier", monospace, sans-serif;
   font-style: normal;
   font-weight: normal;
   color: $text-color;
@@ -40,9 +45,7 @@ body {
 }
 
 .main {
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: auto;
+  flex: 1 0 auto;
   overflow: hidden;
 }
 
