--- a/source/sass/common/mixins.scss
+++ b/source/sass/common/mixins.scss
@@ -4,12 +4,12 @@
 }
 
 @mixin roboto {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
   font-style: normal;
 }
 
 @mixin mono {
-  font-family: "PT Mono", monospace;
+  font-family: "PT Mono", "Courier", monospace;
   font-style: normal;
 }
 
