--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -3,7 +3,7 @@
   padding-top: 45px;
   padding-bottom: 80px;
   background-size: 218px auto;
-  background-position: 106px 51px;
+  background-position: 8.7% 51px;
   background-repeat: no-repeat;
 
   &::before {
@@ -12,7 +12,7 @@
     left: 50%;
     width: 558px;
     height: 562px;
-    margin-left: -1016px;
+    margin-left: -70.5%;
     background-image: url("../img/polygon.svg");
     background-repeat: no-repeat;
     background-size: 558px 562px;
@@ -41,7 +41,7 @@
 .about-company h2 {
   @include roboto;
   margin-top: 0;
-  margin-left: 310px;
+  margin-left: 21.6%;
   margin-bottom: 20px;
   font-size: 36px;
   line-height: 51px;
@@ -49,25 +49,27 @@
 
 .about-company p {
   @include mono;
-  width: 984px;
-  margin-left: 310px;
-  // margin-bottom: 21px;
+  display: flex;
+  max-width: 984px;
+  margin-left: 21.7%;
+  margin-bottom: 21px;
+  padding-right: 10px;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
+  box-sizing: border-box;
 }
 
-.about-company__text--height {
-  margin-top: 21px;
+.about-company .about-company__text--height {
   margin-bottom: 0;
 }
 
-.about-company__text--index-appearance {
+.about-company .about-company__text--index-appearance {
   margin-top: 0;
-  margin-bottom: 39px;
+  margin-bottom: 18px;
 }
 
-.about-company p span {
+.about-company span {
   display: none;
 }
 
@@ -77,7 +79,7 @@
   width: 180px;
   height: 45px;
   margin-bottom: 30px;
-  margin-left: 310px;
+  margin-left: 21.52%;
   padding-top: 14px;
   font-size: 14px;
   line-height: 16px;
@@ -97,26 +99,14 @@
 
 @media (max-width: $desktop-width) {
   .about-company {
-    padding-top: 7px;
+    width: 720px;
+    padding-top: 5px;
     padding-bottom: 53px;
-    background-size: 244px auto;
-    background-position: 0 6px;
-  }
+    background-size: 250px auto;
+    background-position: -10px 5px;
 
-  .no-webp .about-company,
-  .no-js .about-company {
-    background-image: url("../img/2005-year@1x.png");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/2005-year@2x.png");
-    }
-  }
-
-  .webp .about-company {
-    background-image: url("../img/2005-year@1x.webp");
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/2005-year@2x.webp");
+    &::before {
+      display: none;
     }
   }
 
@@ -128,21 +118,22 @@
   }
 
   .about-company p {
-    width: 535px;
+    display: block;
     margin-left: 185px;
     margin-bottom: 20px;
+    padding-right: 0;
+  }
 
-    &--height {
-      margin-bottom: 41px;
-    }
+  .about-company .about-company__text--height {
+    margin-bottom: 41px;
+  }
 
-    & span {
-      display: inline-block;
-    }
+  .about-company span {
+    display: inline-block;
+  }
 
-    &--index-appearance {
-      display: none;
-    }
+  .about-company .about-company__text--index-appearance {
+    display: none;
   }
 
   .about-company__button {
@@ -152,6 +143,8 @@
 
 @media (max-width: $tablet-width) {
   .about-company {
+    width: 100%;
+    box-sizing: border-box;
     padding-top: 6px;
     padding-bottom: 35px;
   }
@@ -175,41 +168,14 @@
   }
 
   .about-company p {
-    width: 290px;
+    min-width: 290px;
     margin-top: 0;
     margin-bottom: 40px;
     margin-left: 0;
-
-    &--height {
-      margin-bottom: 28px;
-    }
-
-    &--index-appearance {
-      display: none;
-    }
   }
 
   .about-company__button {
-    @include button;
-    display: block;
-    width: 180px;
-    height: 45px;
-    margin-bottom: 30px;
+    margin-top: -13px;
     margin-left: 2px;
-    padding-top: 14px;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.05em;
-    color: #ffffff;
-    text-decoration: none;
-    background-color: $blue-color;
-    cursor: pointer;
-
-    &:active {
-      color: $blue-color;
-      background-color: #ffffff;
-      border: 1px solid $blue-color;
-      opacity: 1;
-    }
   }
 }
