--- a/source/sass/blocks/advantages-card.scss
+++ b/source/sass/blocks/advantages-card.scss
@@ -1,22 +1,15 @@
-.advantages-card__wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 1170px;
-}
-
 .advantages-card {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   width: 570px;
   margin-bottom: 30px;
-  margin-left: 1px;
+  margin-left: 0.45%;
+  margin-right: 2.22%;
   padding-top: 38px;
   padding-bottom: 66px;
-  padding-left: 42px;
-  padding-right: 45px;
+  padding-left: 3.9%;
+  padding-right: 3.1%;
   background-color: #ffffff;
   border-top: 1px solid #ebebeb;
   border-bottom: 1px solid #ebebeb;
@@ -25,7 +18,6 @@
 
   &--providers {
     padding-top: 38px;
-    padding-left: 42px;
   }
 
   &--privacy {
@@ -35,7 +27,6 @@
 
   &--personalization {
     padding-top: 38px;
-    padding-left: 43px;
     padding-bottom: 35px;
   }
 
@@ -116,20 +107,18 @@
 }
 
 @media (max-width: $desktop-width) {
-  .advantages-card__wrapper {
-    justify-content: space-between;
-    width: 720px;
-    margin-left: 0;
-  }
-
   .advantages-card {
+    width: 345px;
     margin-bottom: 30px;
+    margin-left: 0;
+    margin-right: 28px;
     padding-top: 23px;
     padding-bottom: 19px;
     padding-left: 25px;
     padding-right: 10px;
 
     &--providers {
+      margin-right: 0;
       padding-top: 22px;
       padding-left: 22px;
     }
@@ -140,6 +129,7 @@
     }
 
     &--personalization {
+      margin-right: 0;
       padding-top: 25px;
       padding-left: 22px;
       padding-bottom: 35px;
@@ -156,9 +146,9 @@
     margin-top: 8px;
   }
 
-  .advantages-card--privicy h2 {
+  .advantages-card--privacy h2 {
     margin-top: 8px;
-    margin-bottom: 13px;
+    margin-bottom: 14px;
   }
 
   .advantages-card--personalization h2 {
@@ -179,17 +169,15 @@
 
 
 @media (max-width: $tablet-width) {
-  .advantages-card__wrapper {
-    width: 290px;
-  }
-
   .advantages-card {
-    width: 290px;
-    box-sizing: border-box;
+    min-width: 290px;
+    max-width: 290px;
     margin-bottom: 20px;
+    margin-right: 20px;
     padding-top: 23px;
     padding-bottom: 14px;
     padding-left: 25px;
+    padding-right: 10px;
 
     &--providers {
       margin-left: 0;
@@ -197,7 +185,6 @@
     }
 
     &--privacy {
-      margin-right: 0;
       margin-left: 0;
       padding-top: 25px;
       padding-bottom: 24px;
@@ -217,7 +204,7 @@
     margin-top: 14px;
   }
 
-  .advantages-card--privicy h2 {
+  .advantages-card--privacy h2 {
     margin-top: 7px;
   }
 
