--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,7 +1,13 @@
 .advantages {
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   padding-top: 110px;
+  padding-left: 6%;
+  padding-right: 4.8%;
   padding-bottom: 30px;
+  box-sizing: border-box;
 
   &::after {
     @include pseudo;
@@ -9,7 +15,7 @@
     left: 50%;
     width: 250px;
     height: 280px;
-    margin-left: 690px;
+    margin-left: 48.2%;
     background-image: url("../img/small-triangle.svg");
     background-repeat: no-repeat;
     background-size: 260px 260px;
@@ -23,13 +29,13 @@
   flex-wrap: wrap;
   justify-content: center;
 
-  &::before {
+  &::after {
     @include pseudo;
     bottom: 467px;
     left: 50%;
     width: 250px;
     height: 280px;
-    margin-left: -766px;
+    margin-left: -65.4%;
     background-image: url("../img/small-triangle.svg");
     background-size: 260px 260px;
     background-repeat: no-repeat;
@@ -37,14 +43,15 @@
     transform: rotate(180deg);
   }
 
-  &::after {
+  &::before {
     @include pseudo;
     bottom: -90px;
     left: 50%;
     width: 558px;
     height: 562px;
-    margin-left: -328px;
+    margin-left: -28%;
     background-image: url("../img/polygon.svg");
+    background-repeat: no-repeat;
     background-size: 558px 562px;
     z-index: -1;
   }
@@ -52,8 +59,11 @@
 
 @media (max-width: $desktop-width) {
   .advantages {
+    width: 720px;
     padding-top: 54px;
     padding-bottom: 19px;
+    padding-left: 1px;
+    padding-right: 0;
 
     &::after {
       display: none;
@@ -61,7 +71,7 @@
   }
 
   .advantages__wrapper {
-    flex-direction: column;
+    justify-content: space-between;
 
     &::before {
       bottom: -155px;
@@ -81,12 +91,19 @@
 
 @media (max-width: $tablet-width) {
   .advantages {
+    width: 100%;
     padding-top: 37px;
     padding-bottom: 30px;
+    padding-left: 15px;
   }
 
-  .advantages__wrapper::before {
-    left: -50%;
-    margin-left: 126px;
+  .advantages__wrapper {
+    justify-content: center;
+    width: 100%;
+
+    &::before {
+      left: -50%;
+      margin-left: 27%;
+    }
   }
 }
