--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -3,14 +3,16 @@
   padding-top: 92px;
   padding-bottom: 112px;
   background-color: $blue-color;
+}
 
+.feedback__form-wrapper {
   &::before {
     @include pseudo;
     top: 161px;
     left: 50%;
-    width: 550px;
+    width: 570px;
     height: 300px;
-    margin-left: -613px;
+    margin-left: -620px;
     background-size: 511px 288px;
     background-repeat: no-repeat;
     background-position: 10px 0;
@@ -23,7 +25,7 @@
     left: 50%;
     width: 625px;
     height: 630px;
-    margin-left: -768px;
+    margin-left: -773px;
     background-image: url("../img/2-triangle.svg");
     background-size: 610px 630px;
     background-repeat: no-repeat;
@@ -32,8 +34,8 @@
   }
 }
 
-.no-webp .feedback::before,
-.no-js .feedback::before {
+.no-webp .feedback__form-wrapper::before,
+.no-js .feedback__form-wrapper::before {
   background-image: url("../img/paper_airplane@1x.png");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -41,7 +43,7 @@
   }
 }
 
-.webp .feedback::before {
+.webp .feedback__form-wrapper::before {
   background-image: url("../img/paper_airplane@1x.webp");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -50,19 +52,49 @@
 }
 
 .feedback__form {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 570px;
   margin-left: auto;
-  margin-right: 130px;
+  margin-right: 9%;
+
+  &::after {
+    @include pseudo;
+    top: 48px;
+    left: 50%;
+    width: 295px;
+    height: 350px;
+    margin-left: 447px;
+    background-image: url("../img/small-triangle.svg");
+    background-repeat: no-repeat;
+    background-size: 280px 500px;
+    background-position: 10px -74px;
+  }
+
+  &::before {
+    @include pseudo;
+    top: -140px;
+    left: 50%;
+    width: 200px;
+    height: 220px;
+    margin-left: 382px;
+    background-image: url("../img/small-triangle.svg");
+    background-repeat: no-repeat;
+    background-size: 200px 200px;
+    background-position: 10px 10px;
+    transform: rotate(180deg);
+  }
 }
 
 .feedback__form-wrapper h2 {
   @include roboto;
+  width: 570px;
   margin-top: 0;
   margin-bottom: 9px;
-  margin-right: 161px;
+  margin-left: auto;
+  margin-right: 11.1%;
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
@@ -74,7 +106,7 @@
   @include mono;
   margin-top: 0;
   margin-bottom: 51px;
-  margin-left: 731px;
+  margin-left: 51%;
   font-size: 16px;
   line-height: 22px;
   font-weight: normal;
@@ -90,7 +122,7 @@
     @include placeholder;
     position: absolute;
     top: 12px;
-    left: 17px;
+    left: 15px;
     transition: 0.5s;
     pointer-events: none;
   }
@@ -99,10 +131,9 @@
 .feedback__form input {
   @include placeholder;
   box-sizing: border-box;
-  width: 269px;
+  min-width: 269px;
   height: 51px;
   margin-bottom: 39px;
-  padding-left: 15px;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid transparent;
   box-shadow: none;
@@ -231,6 +262,33 @@
   color: rgba(255, 255, 255, 0.5);
 }
 
+@media (max-width: 1439px) {
+  .feedback__form-wrapper {
+    & h2 {
+      margin: 0 auto;
+      text-align: left;
+    }
+
+    & p {
+      width: 570px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &::before {
+      display: none;
+    }
+
+    &::after {
+      display: none;
+    }
+  }
+
+  .feedback__form {
+    margin: 0 auto;
+  }
+}
+
 @media (max-width: $desktop-width) {
   .feedback {
     padding-top: 80px;
@@ -254,29 +312,42 @@
     display: none;
   }
 
+  .feedback__form-wrapper {
+    width: 720px;
+    margin: 0 auto;
+  }
+
   .feedback__form-wrapper h2 {
+    width: 720px;
     margin-bottom: 16px;
-    padding-left: 63px;
+    margin-left: 8.85%;
     font-size: 32px;
     line-height: 45px;
     text-align: left;
   }
 
-  .feedback__form-wrappe p {
+  .feedback__form-wrapper p {
     width: 672px;
-    margin-left: 0;
     margin-bottom: 54px;
-    padding-left: 68px;
+    margin-left: 9.5%;
   }
 
   .feedback__form {
     width: 590px;
-    margin-left: 67px;
-    margin-right: 61px;
+    margin-left: 9.5%;
+    margin-right: 7.94%;
+
+    &::before {
+      display: none;
+    }
+
+    &::after {
+      display: none;
+    }
   }
 
   .feedback__form input {
-    width: 280px;
+    min-width: 280px;
     margin-bottom: 42px;
     padding-top: 0;
 
@@ -301,31 +372,36 @@
 @media (max-width: $tablet-width) {
   .feedback {
     padding-top: 30px;
-    padding-bottom: 43px;
+    padding-bottom: 39px;
+  }
+
+  .feedback__form-wrapper {
+    width: 100%;
   }
 
   .feedback__form-wrapper h2 {
-    width: 290px;
+    width: 100%;
+    margin: 0 auto;
     margin-bottom: 13px;
     padding-left: 0;
     font-size: 28px;
     line-height: 39px;
   }
 
-  .feedback__form-wrappe p {
-    width: 290px;
+  .feedback__form-wrapper p {
+    width: 100%;
+    margin: 0 auto;
     margin-bottom: 25px;
     padding-left: 0;
   }
 
   .feedback__form {
-    flex-direction: column;
-    width: 290px;
+    width: 100%;
     margin-left: 0;
   }
 
   .feedback__form input {
-    width: 290px;
+    width: 100%;
     margin-bottom: 31px;
     padding-top: 4px;
     padding-left: 22px;
@@ -334,16 +410,25 @@
     &[type="checkbox"] + .personal-data {
       margin-left: 0;
       padding-left: 34px;
+      width: 100%;
     }
 
     &[type="checkbox"] + .personal-data::before {
       top: 1px;
       left: 0;
     }
+
+    &[type="checkbox"] {
+      margin-top: -10px;
+    }
+  }
+
+  .feedback__input-wrapper {
+    width: 100%;
   }
 
   .feedback__form textarea {
-    width: 290px;
+    width: 100%;
     height: 104px;
     margin-bottom: 25px;
     padding-top: 12px;
@@ -353,7 +438,7 @@
   }
 
   .feedback__button {
-    width: 290px;
+    width: 100%;
     margin-bottom: 24px;
   }
 }
