--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -6,10 +6,8 @@
 
 .footer__wrapper {
   display: flex;
-  width: 1430px;
+  justify-content: space-between;
   margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
   padding-bottom: 44px;
 }
 
@@ -21,18 +19,23 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 383px;
+  max-width: 383px;
+  min-width: 216px;
   padding-top: 0;
-  padding-left: 6px;
+  padding-left: 3%;
 }
 
 .footer__logo {
   display: block;
+  width: 216px;
+  height: 52px;
   margin-bottom: 36px;
 }
 
 .no-js .footer__logo img {
   display: none;
+  width: 216px;
+  height: 52px;
 }
 
 .no-js .footer__logo {
@@ -66,11 +69,12 @@
 }
 
 .footer__copyright--desktop-logo {
-  margin-left: 74px;
-  margin-right: 144px;
+  margin-left: 5.5%;
+  margin-right: 10%;
 }
 
 .footer__accordion {
+  width: 74.3%;
   padding-top: 53px;
 }
 
@@ -78,11 +82,16 @@
   display: flex;
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 62px;
   list-style: none;
 }
 
+.footer__accordion-sub {
+  width: 500px;
+}
+
 .footer__accordion-sub--margin-left {
-  width: 350px;
+  width: 343px;
   margin-left: 157px;
   margin-right: 0;
 }
@@ -96,7 +105,7 @@
   margin: 0 auto;
   padding-top: 14px;
   padding-bottom: 13px;
-  padding-left: 12px;
+  padding-left: 0.6%;
 }
 
 .footer__agreement-copyright {
@@ -113,7 +122,7 @@
 
 .footer__link-agreement {
   @include mono;
-  margin-right: 405px;
+  margin-right: 28.5%;
   font-size: 13px;
   font-weight: normal;
   line-height: 24px;
@@ -140,6 +149,7 @@
     position: relative;
     flex-direction: column;
     width: 720px;
+    padding-top: 2px;
     padding-bottom: 36px;
 
     &::before {
@@ -153,14 +163,24 @@
   }
 
   .footer__copyright--tablet-width {
+    @include mono;
+    position: relative;
     display: block;
     margin-top: 17px;
-    margin-right: 71px;
+    margin-bottom: 0;
+    margin-right: 57px;
+    font-size: 13px;
+    font-weight: normal;
+    line-height: 24px;
+    color: rgba(27, 47, 55, 0.5);
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    text-align: center;
   }
 
   .footer__social-wrapper {
     flex-direction: row;
-    width: 720px;
+    min-width: 720px;
     padding-left: 0;
   }
 
@@ -175,17 +195,22 @@
     margin-right: 88px;
   }
 
+  .footer__accordion-sub {
+    width: 50%;
+  }
+
   .footer__accordion-list {
     width: 720px;
     padding-left: 0;
   }
 
   .footer__accordion {
-    padding-top: 9px;
+    padding-top: 10px;
+    width: 100%;
   }
 
   .footer__accordion-sub--margin-left {
-    margin-left: 86px;
+    margin-left: 33px;
 
     & h2 {
       margin-bottom: 20px;
@@ -212,13 +237,14 @@
 
   .footer__agreement-copyright {
     margin-left: auto;
-    margin-right: 0;
+    margin-right: -9px;
   }
 }
 
 @media (max-width: $tablet-width) {
   .footer__wrapper {
-    width: 290px;
+    box-sizing: border-box;
+    width: 100%;
     padding-bottom: 0;
 
     &::before {
@@ -235,7 +261,9 @@
   .footer__social-wrapper {
     flex-direction: column;
     align-items: center;
-    width: 290px;
+    max-width: 290px;
+    min-width: 290px;
+    margin: 0 auto;
   }
 
   .footer__logo {
@@ -250,6 +278,11 @@
 
   .footer__accordion-list {
     flex-direction: column;
+    width: 290px;
+    margin: 0 auto;
+  }
+
+  .footer__accordion-sub {
     width: 290px;
   }
 
@@ -271,7 +304,7 @@
   .footer__agreement-wrapper {
     flex-direction: column;
     align-items: center;
-    padding-top: 14px;
+    padding-top: 16px;
     padding-bottom: 3px;
   }
 
@@ -300,7 +333,7 @@
 
   .footer__accordion .sub > .footer__accordion-link.active::before {
     @include pseudo;
-    top: 30px;
+    top: 28px;
     left: 50%;
     width: 16px;
     height: 16px;
