--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,7 +3,7 @@
   padding-top: 30px;
   padding-bottom: 135px;
   background-color: #1b2931;
-  background-size: 1920px 950px;
+  background-size: 100% 950px;
   background-repeat: no-repeat;
   background-position: 50% 0;
   overflow: hidden;
@@ -37,7 +37,7 @@
     left: 50%;
     width: 37px;
     height: 13px;
-    margin-left: -402px;
+    margin-left: -28.1%;
     background-image: url("../img/union.svg");
   }
 
@@ -76,7 +76,7 @@
   width: 202px;
   height: 52px;
   margin-top: 5px;
-  margin-left: -8px;
+  margin-left: -0.5%;
 
   & img {
     width: 202px;
@@ -105,7 +105,8 @@
   width: 19px;
   height: 14px;
   margin-top: 22px;
-  margin-left: 551px;
+  padding-right: 8.3%;
+  margin-left: 38.6%;
   text-decoration: none;
   cursor: pointer;
 
@@ -114,7 +115,7 @@
     position: absolute;
     content: "info@sd.ru";
     top: 0;
-    left: 38px;
+    left: 26%;
     width: 96px;
     font-weight: normal;
     font-size: 16px;
@@ -144,7 +145,9 @@
   width: 18px;
   height: 18px;
   margin-top: 22px;
-  margin-left: 204px;
+  margin-left: 5.7%;
+  padding-right: 13.8%;
+  margin-right: 0.9%;
   cursor: pointer;
 
   &::after {
@@ -152,7 +155,7 @@
     position: absolute;
     content: "+7 (495) 000 52 52";
     top: 0;
-    left: 34px;
+    left: 16%;
     width: 184px;
     font-weight: normal;
     font-size: 16px;
@@ -183,7 +186,7 @@
   width: 180px;
   height: 45px;
   margin-top: 9px;
-  margin-left: 238px;
+  margin-left: 2%;
   font-size: 14px;
   line-height: 16px;
   white-space: nowrap;
@@ -206,9 +209,10 @@
 
 .page-header__proposal h1 {
   @include roboto;
+  position: relative;
   margin-top: 0;
   width: 740px;
-  margin-left: -11px;
+  margin-left: -0.76%;
   margin-bottom: 25px;
   font-weight: bold;
   font-size: 80px;
@@ -217,6 +221,7 @@
   color: #ffffff;
   text-transform: uppercase;
   overflow: hidden;
+  z-index: 2;
 }
 
 .page-header__proposal p {
@@ -224,7 +229,7 @@
   position: relative;
   margin-top: 0;
   width: 650px;
-  margin-left: 87px;
+  margin-left: 6.08%;
   margin-bottom: 44px;
   font-size: 22px;
   font-weight: normal;
@@ -236,7 +241,7 @@
     top: 17px;
     width: 66px;
     height: 2px;
-    margin-left: -94px;
+    margin-left: -14.5%;
     background-color: #ffffff;
   }
 }
@@ -247,7 +252,8 @@
   height: 55px;
   width: 407px;
   margin-bottom: 120px;
-  margin-left: 87px;
+  margin-left: 6.08%;
+  margin-right: 0;
   padding-top: 17px;
   font-size: 16px;
   line-height: 19px;
@@ -278,7 +284,7 @@
   display: block;
   width: 110px;
   height: 20px;
-  margin-left: -53px;
+  margin-left: -3.7%;
   font-size: 14px;
   line-height: 16px;
   color: rgba(255, 255, 255, 0.5);
@@ -297,11 +303,25 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .page-header__mail {
+    margin-left: 26%;
+  }
+
+  .page-header__phone {
+    margin-right: 3.9%;
+  }
+
+  .page-header__proposal p {
+    width: 600px;
+  }
+}
+
 @media (max-width: $desktop-width) {
   .page-header {
     padding-top: 17px;
     padding-bottom: 43px;
-    background-size: 768px auto;
+    background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: 50% 0;
   }
@@ -329,6 +349,8 @@
   }
 
   .page-header__wrapper-block {
+    width: 720px;
+    margin: 0 auto;
     padding-bottom: 0;
     margin-bottom: 117px;
 
@@ -344,7 +366,7 @@
 
     &::after {
       top: 20px;
-      margin-left: 203px;
+      margin-left: 204px;
     }
   }
 
@@ -370,6 +392,7 @@
     height: 19px;
     margin-top: 18px;
     margin-left: 435px;
+    padding-right: 0;
 
     &::after {
       display: none;
@@ -386,6 +409,8 @@
     height: 24px;
     margin-top: 15px;
     margin-left: 32px;
+    margin-right: 0;
+    padding-right: 0;
 
     &::after {
       display: none;
@@ -397,6 +422,13 @@
     height: 24px;
   }
 
+  .page-header__proposal {
+    width: 720px;
+    margin: 0 auto;
+    padding-left: 125px;
+  }
+
+
   .page-header__proposal h1 {
     width: 340px;
     margin-bottom: 28px;
@@ -406,14 +438,11 @@
     letter-spacing: 4.7px;
   }
 
-  .page-header__proposal {
-    margin-left: 63px;
-  }
-
   .page-header__proposal p {
     width: 356px;
     margin-bottom: 55px;
     margin-left: 51px;
+    padding-left: 0;
     font-size: 18px;
     line-height: 28px;
 
@@ -451,7 +480,7 @@
   .page-header {
     padding-top: 17px;
     padding-bottom: 70px;
-    background-size: 320px auto;
+    background-size: 100% auto;
   }
 
   .no-webp .page-header,
@@ -472,6 +501,7 @@
   }
 
   .page-header__wrapper-block {
+    width: 100%;
     margin-bottom: 0;
     padding-bottom: 231px;
 
@@ -510,6 +540,10 @@
     }
   }
 
+  .page-header__logo img {
+    display: none;
+  }
+
   .no-js .page-header__logo {
     width: 38px;
     height: 38px;
@@ -533,18 +567,23 @@
 
   .page-header__mail {
     margin-top: 8px;
-    margin-left: 177px;
+    margin-left: auto;
   }
 
   .page-header__phone {
     margin-top: 5px;
-    margin-left: 22px;
+    margin-left: 8%;
     text-decoration: none;
+  }
+
+  .page-header__proposal {
+    width: 100%;
+    padding-left: 21.5%;
   }
 
   .page-header__proposal h1 {
     position: relative;
-    width: 290px;
+    min-width: 100%;
     margin-bottom: 27px;
     margin-left: -63px;
     font-size: 40px;
@@ -554,16 +593,17 @@
   }
 
   .page-header__proposal p {
-    width: 245px;
+    width: 76.5%;
+    max-width: 425px;
     margin-bottom: 40px;
-    margin-left: -12px;
+    margin-left: -3.8%;
     font-size: 16px;
     line-height: 25px;
 
     &::before {
       top: 15px;
       left: 50%;
-      margin-left: -170px;
+      margin-left: -72%;
     }
   }
 
