--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -2,10 +2,10 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 0;
-  margin-left: 13px;
-  margin-right: 13px;
-  padding-left: 116px;
-  padding-right: 85px;
+  margin-left: 0.9%;
+  margin-right: 0.9%;
+  padding-left: 8%;
+  padding-right: 5%;
   list-style: none;
 }
 
@@ -13,7 +13,7 @@
   display: flex;
   width: 370px;
   height: 620px;
-  margin-right: 31px;
+  margin-right: 2.5%;
   margin-bottom: 31px;
 }
 
@@ -124,6 +124,7 @@
     width: 715px;
     height: 256px;
     margin-bottom: 46px;
+    margin-right: 0;
   }
 
   .product-list__link {
@@ -193,11 +194,23 @@
   }
 }
 
+@media (min-width: 647px) {
+  .product-list {
+    justify-content: flex-start;
+  }
+}
+
 @media (max-width: $tablet-width) {
+  .product-list {
+    align-items: center;
+    width: 100%;
+  }
+
   .product-list__item {
     width: 290px;
     height: 256px;
     margin-bottom: 30px;
+    margin-right: 15px;
   }
 
   .product-list__link {
