--- a/source/sass/blocks/advantages-card.scss
+++ b/source/sass/blocks/advantages-card.scss
@@ -2,42 +2,29 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  width: 570px;
+  width: 48.7%;
+  min-height: 299px;
   margin-bottom: 30px;
-  margin-left: 0.45%;
-  margin-right: 2.22%;
-  padding-top: 38px;
-  padding-bottom: 66px;
-  padding-left: 3.9%;
-  padding-right: 3.1%;
+  margin-right: 1.56%;
+  padding-top: 40px;
+  padding-bottom: 38px;
+  padding-left: 3.5%;
+  padding-right: 3.5%;
   background-color: #ffffff;
-  border-top: 1px solid #ebebeb;
-  border-bottom: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
+  border: 1px solid #ebebeb;
+  border-left: none;
   box-shadow: -2px 0 0 $blue-color;
-
-  &--providers {
-    padding-top: 38px;
-  }
-
-  &--privacy {
-    padding-top: 43px;
-    padding-bottom: 109px;
-  }
-
-  &--personalization {
-    padding-top: 38px;
-    padding-bottom: 35px;
-  }
 
   &:hover {
     color: #ffffff;
     background-color: $blue-color;
     border-top: 1px solid $blue-color;
-    border-bottom: 1px solid $blue-color;
-    border-right: 1px solid $blue-color;
     cursor: pointer;
   }
+}
+
+.advantages-card:nth-child(2n) {
+  margin-right: 0;
 }
 
 .advantages-card__icon-svg {
@@ -63,32 +50,14 @@
   color: $blue-color;
 }
 
-.advantages-card--providers h2 {
-  margin-top: 20px;
-}
-
-.advantages-card--privicy h2 {
-  margin-top: 20px;
-  margin-bottom: 16px;
-}
-
-.advantages-card--personalization h2 {
-  margin-top: 20px;
-  margin-bottom: 16px;
-}
-
 .advantages-card p {
   @include mono;
-  width: 482px;
+  width: 100%;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
-}
-
-.advantages-card--providers p {
-  width: 483px;
 }
 
 .advantages-card__icon-svg--hired {
@@ -108,91 +77,47 @@
 
 @media (max-width: $desktop-width) {
   .advantages-card {
-    width: 345px;
-    margin-bottom: 30px;
+    width: 47.5%;
+    min-height: 232px;
+    margin-bottom: 32px;
     margin-left: 0;
-    margin-right: 28px;
-    padding-top: 23px;
-    padding-bottom: 19px;
+    margin-right: 30px;
+    padding-top: 24px;
+    padding-bottom: 20px;
     padding-left: 25px;
     padding-right: 10px;
+  }
 
-    &--providers {
-      margin-right: 0;
-      padding-top: 22px;
-      padding-left: 22px;
-    }
-
-    &--privacy {
-      padding-top: 24px;
-      padding-bottom: 55px;
-    }
-
-    &--personalization {
-      margin-right: 0;
-      padding-top: 25px;
-      padding-left: 22px;
-      padding-bottom: 35px;
-    }
+  .advantages-card:nth-child(2n) {
+    margin-right: 0;
   }
 
   .advantages-card h2 {
     width: 310px;
     margin-top: 6px;
-    margin-bottom: 10px;
-  }
-
-  .advantages-card--providers h2 {
-    margin-top: 8px;
-  }
-
-  .advantages-card--privacy h2 {
-    margin-top: 8px;
-    margin-bottom: 14px;
-  }
-
-  .advantages-card--personalization h2 {
-    margin-top: 7px;
-    margin-bottom: 7px;
+    margin-bottom: 8px;
   }
 
   .advantages-card p {
-    width: 295px;
+    width: 95%;
     margin-top: 0;
     margin-bottom: 0;
-  }
-
-  .advantages-card--providers p {
-    width: 290px;
   }
 }
 
 
 @media (max-width: $tablet-width) {
   .advantages-card {
-    min-width: 290px;
-    max-width: 290px;
+    width: 100%;
     margin-bottom: 20px;
-    margin-right: 20px;
+    margin-right: 0;
     padding-top: 23px;
     padding-bottom: 14px;
     padding-left: 25px;
     padding-right: 10px;
-
-    &--providers {
-      margin-left: 0;
-      padding-top: 21px;
-    }
-
-    &--privacy {
-      margin-left: 0;
-      padding-top: 25px;
-      padding-bottom: 24px;
-    }
   }
 
   .advantages-card h2 {
-
     width: 245px;
     margin-top: 11px;
     margin-bottom: 10px;
@@ -200,25 +125,13 @@
     line-height: 28px;
   }
 
-  .advantages-card--providers h2 {
-    margin-top: 14px;
-  }
-
-  .advantages-card--privacy h2 {
-    margin-top: 7px;
-  }
-
-  .advantages-card--personalization h2 {
-    margin-bottom: 12px;
-  }
-
   .advantages-card p {
-    width: 245px;
+    width: 98%;
     margin-top: 0;
     margin-bottom: 10px;
   }
 
   .advantages-card--providers p {
-    width: 250px;
+    width: 98.3%;
   }
 }
