--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -5,25 +5,30 @@
   margin-left: 0.9%;
   margin-right: 0.9%;
   padding-left: 8%;
-  padding-right: 5%;
+  padding-right: 7.9%;
   list-style: none;
 }
 
 .product-list__item {
   display: flex;
-  width: 370px;
+  width: 31.5%;
+  min-width: 256px;
   height: 620px;
-  margin-right: 2.5%;
+  margin-right: 2.6%;
   margin-bottom: 31px;
+}
+
+.product-list__item:nth-child(3n) {
+  margin-right: 0;
 }
 
 .product-list__link {
   position: relative;
   box-sizing: border-box;
   text-decoration: none;
-  width: 370px;
+  width: 100%;
   height: 620px;
-  background-size: 370px 620px;
+  background-size: 100% 620px;
   background-repeat: no-repeat;
   border: 1px solid transparent;
   background-color: #38464d;
@@ -116,21 +121,22 @@
 @media (max-width: $desktop-width) {
   .product-list {
     justify-content: center;
+    margin-left: 0;
+    margin-right: 0;
     padding-left: 0;
     padding-right: 0;
   }
 
   .product-list__item {
-    width: 715px;
+    width: 100%;
     height: 256px;
     margin-bottom: 46px;
     margin-right: 0;
   }
 
   .product-list__link {
-    width: 715px;
     height: 256px;
-    background-size: 715px 256px;
+    background-size: 100% 256px;
   }
 
   .product-list__item h3 {
@@ -207,22 +213,20 @@
   }
 
   .product-list__item {
-    width: 290px;
+    width: 100%;
     height: 256px;
     margin-bottom: 30px;
-    margin-right: 15px;
   }
 
   .product-list__link {
-    width: 290px;
     height: 256px;
-    background-size: 290px 256px;
+    background-size: 100% 256px;
   }
 
   .product-list__item h3 {
     width: 155px;
     margin-top: 20px;
-    margin-left: 36px;
+    margin-left: 34px;
   }
 
   .product-list__item--components h3 {
