правит ml для footer__social-wrapper p, чтобы на 1024 не наползал на др элементы

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -31,7 +31,7 @@
   @include mono;
   bottom: -53px;
   left: 50%;
-  margin-left: -484px;
+  margin-left: -33.8%;
   font-size: 13px;
   font-weight: normal;
   line-height: 24px;
